More dark mode fixes

--- a/css/main.scss
+++ b/css/main.scss
@@ -37,11 +37,10 @@ h3 {
 
 .content {
     overflow: hidden;
+    @media (prefers-color-scheme: dark) {
+        color: $dark-text-color;
+    }
     p {
-        @media (prefers-color-scheme: dark) {
-            color: $dark-text-color;
-        }
-
         font-size: 1em;
         line-height: 1.5em;
         margin: 0 0 1.5em 0;
@@ -68,6 +67,15 @@ h3 {
 .post-link {
     h2 {
         margin: 0;
+    }
+}
+
+.markdown-body {
+    @media (prefers-color-scheme: dark) {
+        color: $dark-post-meta-color;
+        a {
+            text-decoration: underline;
+        }
     }
 }
 
